--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+body{
+    background-color: bisque;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+    background-color: aqua;
+    color: crimson;
+    font-weight: 900;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gameBoard{
+    height: 60vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.game-squar{
+    width: 33.33%;
+    height: 33.33%;
 }
-
-.App-link {
-  color: #61dafb;
+.bt{
+    border-top: 4px solid #32a854;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bb{
+    border-bottom: 4px solid #32a854;
+}
+.bsb{
+    border-right: 4px solid #32a854;
+    border-left: 4px solid #32a854;
+}
+.x5{
+    font-size: 5rem;
+}
+button{
+    background-color: brown;
+    color: aliceblue;
+    margin-bottom: 6px;
 }
